k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: commandkit
  labels:
    name: commandkit
    app.kubernetes.io/name: commandkit
    app.kubernetes.io/part-of: commandkit
